style: 💄 fix reference data breaking on smaller screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,10 @@ h1 {
   }
 }
 
+.reference {
+  @apply flex justify-between text-[0.9rem] border-t border-slate-600 pt-1 mt-1;
+}
+
 @media (min-width: 1200px) {
   .wallet-data {
     @apply grid-cols-4;
